[package]
# essential fields
name = "dnp-dnpm"
version = "0.0.1"
edition = "2021"
# additional fields (in alphabetic order)
authors = ["Glenn Adams <glenn@skynav.com>"]
categories = ["network-programming"]
description = """
dnp-dnpm is a library that implements a Distributed Network Protocol (3)
Machine that adheres to IEEE 1815-2012 when used with IP bindings;
not yet ready for download - placeholder for work in progress
"""
documentation = "https://github.com/skynav/mms/crates/dnpm"
homepage = "https://github.com/skynav/mms/crates/dnpm"
keywords = ["dnp"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/skynav/mms/crates/dnpm"

[dependencies]
